--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1617,6 +1617,38 @@ body {
     font-size: 0.6rem;
   }
 }
+.cid-rr71XZ11QI {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #cccccc;
+}
+.cid-rr71XZ11QI .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+  color: #232323;
+}
+.cid-rr71XZ11QI .mbr-author-name {
+  font-weight: bold;
+  color: #232323;
+}
+.cid-rr71XZ11QI .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-rr71XZ11QI .mbr-figure,
+  .cid-rr71XZ11QI img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-rr71XZ11QI .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
+.cid-rr71XZ11QI .mbr-author-desc {
+  color: #232323;
+}
 .cid-rqfsojQOBG {
   padding-top: 45px;
   padding-bottom: 45px;
