create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1414,7 +1414,7 @@ body {
   box-shadow: none !important;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/mbr-1920x1445.jpg");
+  background-image: url("../../../assets/images/mbr-2-1920x1280.jpg");
 }
 .cid-qTkA127IK8 H1 {
   color: #ff3366;
@@ -1422,7 +1422,7 @@ body {
 }
 .cid-qTkA127IK8 .mbr-text,
 .cid-qTkA127IK8 .mbr-section-btn {
-  color: #cc2952;
+  color: #ffffff;
   text-align: center;
 }
 .cid-rqbE4bCKiI {
